# django-taxi

./: .pre-commit-config.yaml  README.md  pyproject.toml
django_taxi/: fields.py  mixins.py  models.py
django_taxi/migrations/: 0001_initial.py  0002_alter_termtaxonomyitem_object_id.py
tests/: test_django_taxi.py
