[tool.poetry]
name = "django-taxi"
version = "0.1.0"
description = ""
authors = ["Daniel Nibon <daniel@nibon.se>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
Django = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
